refactor(Bridal party): update css and missing picture
update css and missing picture

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged",
-      "pre-push": "yarn deploy"
+      "pre-commit": "pretty-quick --staged"
     }
   },
   "browserslist": {
