--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "react-slideshow-image": "^1.3.4",
     "style-loader": "^1.1.3"
   },
