--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://www.veravincenzo2020.com",
+  "homepage": "http://www.veravincenzo.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
